build: base env file for development

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE=postgres
-DATABASE_USER=postgres
-DATABASE_PASSWORD="hotel#app222prueba"
-DATABASE_URL="db.psiiegfhkwnwghkhufll.supabase.co"
+DATABASE=hotels
+DATABASE_USER=development
+DATABASE_PASSWORD=development
+DATABASE_URL="localhost"
 DATABASE_PORT=5432
