--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,13 @@ steps:
     SourceFolder: 'dist/'
     Contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+  displayName: 'copy dist folder'
+
+- task: CopyFiles@2
+  inputs:
+    Contents: 'package.json'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+  displayName: 'copy package.json'
 
 - publish: '$(Build.ArtifactStagingDirectory)'
   displayName: 'Publish artifact'
