ci: added node_modules folder to artifact build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,9 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    Contents: 'package.json'
+    Contents: |
+      package.json
+      node_modules/
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
   displayName: 'copy package.json'
 
