--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,11 +33,16 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    Contents: |
-      package.json
-      node_modules/
+    Contents: package.json
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
   displayName: 'copy package.json'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)/node_modules'
+    Contents: '**'  # Copy all files and subdirectories within node_modules
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/node_modules'
+  displayName: 'Copy node_modules'
 
 - publish: '$(Build.ArtifactStagingDirectory)'
   displayName: 'Publish artifact'
