ci: try to deploy all files on artifact

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,13 +24,11 @@ steps:
     npm run test
   displayName: 'unit tests'
 
-- task: ArchiveFiles@2
+- task: CopyFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory)'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+  displayName: 'Copy Files'
 
 - publish: '$(Build.ArtifactStagingDirectory)'
   displayName: 'Publish artifact'
